@@ -14,6 +14,7 @@
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
             <version>2.0</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- DO NOT DELETE!!! -->
@@ -21,6 +22,7 @@
             <groupId>org.jboss.spec.javax.annotation</groupId>
             <artifactId>jboss-annotations-api_1.3_spec</artifactId>
             <version>1.0.1.Final-redhat-1</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- DO NOT DELETE!!! -->
@@ -28,6 +30,7 @@
             <groupId>org.jboss.spec.javax.ws.rs</groupId>
             <artifactId>jboss-jaxrs-api_2.1_spec</artifactId>
             <version>1.0.2.Final-redhat-00001</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -41,27 +44,27 @@
             <groupId>at.gepardec.intellij-maven-jboss</groupId>
             <artifactId>intellij-maven-jboss-helloworld-service</artifactId>
             <version>${project.version}</version>
-            <type>jar</type>
-            <classifier>jar</classifier>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.9</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
-            <version>4.1.1</version>
+            <version>4.3.3</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.1.0</version>
+            <version>5.7.0</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -72,6 +75,23 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M3</version>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>3.0.0-M3</version>
+                <executions>
+                    <execution>
+                        <id>integration-test</id>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <includes>
                         <include>**/*IT.java</include>
@@ -92,11 +112,65 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <version>2.0.2.Final</version>
+                <configuration>
+                    <jboss-home>${project.basedir}/../wildfly-17.0.1.Final</jboss-home>
+                    <javaOpts>
+                        <javaOpt>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-modules=java.se</javaOpt>
+                        <javaOpt>--add-opens=java.base/java.lang=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-opens=java.base/java.io=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-opens=java.base/java.net=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-opens=java.base/java.security=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-opens=java.base/java.util=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-opens=java.management/javax.management=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-opens=java.naming/javax.naming=ALL-UNNAMED</javaOpt>
+                    </javaOpts>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>start-wildfly</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>start</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>deploy-war</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>undeploy-war</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>undeploy</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>stop-wildfly</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>shutdown</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
+                <version>3.2.3</version>
                 <configuration>
                     <webappDirectory>target/helloworld-rs</webappDirectory>
-                    <warSourceDirectory>src/main/resources</warSourceDirectory>
+                    <warSourceDirectory>src/main/webapp</warSourceDirectory>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
